--- a/examples/package.json
+++ b/examples/package.json
@@ -1,29 +1,30 @@
 {
   "name": "pure-ui-playground",
   "version": "0.0.0",
-  "description": "<TODO>",
+  "description": "",
   "author": {
-    "name": "<TODO>",
-    "email": "<TODO>",
-    "url": "<TODO>"
+    "name": "Nik Graf",
+    "email": "nik@nikgraf.com",
+    "url": "https://github.com/nikgraf"
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/nikgraf/belle.git"
+    "url": "http://github.com/pure-ui/react-pure-ui.git"
   },
   "dependencies": {
-    "react": "=0.14.2",
-    "react-dom": "^0.14.2"
+    "react": "=0.14.3",
+    "react-dom": "^0.14.3"
   },
   "devDependencies": {
-    "babel-core": "^5.8.25",
-    "babel-loader": "^5.3.2",
+    "babel-core": "^5.8.33",
+    "babel-loader": "^5.3.3",
+    "eslint": "^1.10.2",
     "express": "^4.13.3",
     "node-libs-browser": "^0.5.3",
     "react-transform-catch-errors": "^1.0.0",
-    "redbox-react": "^1.1.1",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "redbox-react": "^1.2.0",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
   },
   "scripts": {
     "start": "node server.js"
