--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.0",
   "description": "",
   "author": {
-    "name": "<TODO>",
-    "email": "<TODO>",
-    "url": "<TODO>"
+    "name": "Nik Graf",
+    "email": "nik@nikgraf.com",
+    "url": "https://github.com/nikgraf"
   },
   "repository": {
     "type": "git",
-    "url": "<TODO>"
+    "url": "http://github.com/pure-ui/react-pure-ui.git"
   },
   "main": "lib/index.js",
   "keywords": [
@@ -22,46 +22,47 @@
   "scripts": {
     "build": "BABEL_ENV=production babel --out-dir='lib' --ignore='__tests__/*' src",
     "prepublish": "npm run build",
-    "postpublish": "./scripts/publish_gh_pages.sh",
-    "test": "BABEL_ENV=test BABEL_JEST_STAGE=0 jest src/",
+    "test": "mocha test --recursive --require ./test/testHelper.js --compilers js:babel/register",
     "test:watch": "npm run test -- --watch",
     "lint": "npm run lint:eslint && npm run lint:jscs",
     "lint:eslint": "eslint ./",
     "lint:jscs": "jscs ./"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-core": "^5.8.25",
-    "babel-eslint": "^4.1.3",
+    "babel": "^5.8.29",
+    "babel-core": "^5.8.33",
+    "babel-eslint": "^4.1.5",
     "babel-jest": "^5.3.0",
-    "babel-loader": "^5.3.2",
+    "babel-loader": "^5.3.3",
     "babel-plugin-react-transform": "^1.1.1",
-    "eslint": "^1.8.0",
-    "eslint-config-airbnb": "0.1.0",
-    "eslint-plugin-react": "^3.6.3",
-    "jest-cli": "^0.7.0",
-    "jscs": "^2.5.0",
-    "react": "^0.14.2",
-    "react-addons-test-utils": "^0.14.2",
-    "react-dom": "^0.14.2",
+    "chai": "^3.4.1",
+    "eslint": "^1.10.2",
+    "eslint-config-airbnb": "^1.0.2",
+    "eslint-plugin-react": "^3.10.0",
+    "jest-cli": "^0.8.0",
+    "jscs": "^2.6.0",
+    "mocha": "^2.3.4",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
-    "redbox-react": "^1.1.1",
-    "webpack": "^1.12.2",
-    "webpack-dev-middleware": "^1.2.0",
-    "webpack-dev-server": "^1.12.1",
-    "webpack-hot-middleware": "^2.4.1"
+    "reagent": "^1.0.0",
+    "redbox-react": "^1.2.0",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0",
+    "webpack": "^1.12.9",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-dev-server": "^1.14.0",
+    "webpack-hot-middleware": "^2.5.0"
   },
-  "jest": {
-    "unmockedModulePathPatterns": [
-      "<rootDir>/node_modules/react",
-      "underscore",
-      "../utils/helpers",
-      "../utils/union-class-names",
-      "../utils/is-component-of-type"
-    ],
-    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
-    "preprocessCachingDisabled": true
-  },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "belle": "^2.0.2",
+    "faker": "^3.0.1",
+    "immutable": "^3.7.5",
+    "react": "^0.14.3",
+    "react-addons-create-fragment": "^0.14.3",
+    "react-addons-test-utils": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "react-shallow-testutils": "^0.6.1",
+    "recompose": "^0.11.2"
+  }
 }
