--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-loader": "^5.3.3",
     "babel-plugin-react-transform": "^1.1.1",
     "chai": "^3.4.1",
+    "enzyme": "^1.0.1",
     "eslint": "^1.10.2",
     "eslint-config-airbnb": "^1.0.2",
     "eslint-plugin-react": "^3.10.0",
@@ -44,7 +45,6 @@
     "mocha": "^2.3.4",
     "react-transform-catch-errors": "^1.0.0",
     "react-transform-hmr": "^1.0.1",
-    "reagent": "^1.0.0",
     "redbox-react": "^1.2.0",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
