--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "eslint-plugin-react": "^3.11.3",
     "faker": "^3.0.1",
     "immutable": "^3.7.5",
+    "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-addons-create-fragment": "^0.14.3",
-    "react-addons-test-utils": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-shallow-testutils": "^0.6.1",
     "recompose": "^0.11.2"
